--- a/gymtech.css
+++ b/gymtech.css
@@ -698,7 +698,7 @@ footer p{
 
 
     #topoMateusCenter img{
-        border: solid 6px rgb(190, 189, 189) ;
+        border: solid 6px  #fff ;
         width: 100%;
         height: 110%;
         border-radius:150px 150px;
@@ -882,7 +882,7 @@ footer p{
 
 
 #topoRoseCenter img{
-    border: solid 6px rgb(190, 189, 189) ;
+    border: solid 6px  #fff ;
     width: 100%;
     height: 110%;
     border-radius:150px 150px;
@@ -2683,9 +2683,41 @@ form input:focus::placeholder{
             width: 103%;
         }
 
+        #topoMateusCenter img{
+        
+            margin-left: -20%;
+        }
+
+        #topoMateusLeft h1{
+            width: 40%;
+            font-size: 1.7em;
+            text-transform: uppercase;
+            font-weight: 500;
+            margin: 0px auto;
+        }
+
+        #topoMateusRight h1{
+            font-size: 1.7em;
+            margin-left: -20px;
+        }
+
+        #bodyMateus #bandeiraRm{
+            margin-left: -70px;
+        }
+
+        #topoMateusSetaEsquerda{
+            top: 42%;
+            left:-4%;
+        }
+
+        #topoMateusSetaDireita{
+           top: 42%;
+            left: 83%;
+        }
+
         #topoRoseSetaEsquerda{
             top: 42%;
-            left:0%;
+            left:-4%;
         }
 
         #topoRoseSetaDireita{
@@ -2693,8 +2725,76 @@ form input:focus::placeholder{
             left: 83%;
         }
 
+        #topoRoseCenter img{
+        
+            margin-left: -20%;
+        }
+
+        #topoRoseLeft h1{
+            width: 40%;
+            font-size: 1.7em;
+            text-transform: uppercase;
+            font-weight: 500;
+            margin: 0px auto;
+        }
+
+        #topoRoseRight h1{
+            font-size: 1.7em;
+            margin-left: -20px;
+        }
+
+        #bodyRose #bandeiraRm{
+            margin-left: -90px;
+        }
+
         footer{
             width: 103%;
+        }
+
+        #bodyRose footer{
+            width: 103%;
+            position: absolute;
+        }
+
+        #bodyMateus footer{
+            width: 103%;
+            position: absolute;
+        }
+        #imagemGrande{
+            height: 1100px;
+            background-attachment: fixed;
+            background-size: 80% 40%;
+        }
+
+        .left{
+            position: relative;
+            top: 73%;
+            left: -30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            background-attachment: fixed;
+            top:73%;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 30%;
+            left: 30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
         }
 
 
@@ -2913,6 +3013,43 @@ form input:focus::placeholder{
             top: 65%;
             left: 85%;
         }
+
+        #imagemGrande{
+            height: 1100px;
+            background-attachment: fixed;
+            background-size: 80% 40%;
+        }
+
+        .left{
+            position: relative;
+            top: 70%;
+            left: -30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            background-attachment: fixed;
+            top:70%;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 30%;
+            left: 30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
     
 
         
@@ -2928,9 +3065,39 @@ form input:focus::placeholder{
             margin-left: -20px;
         }
 
+        #topoMateusSetaDireita{
+            left: 78%;
+            top: 55%;
+        }
+
+        #topoMateusSetaEsquerda{
+            top: 55%;
+        }
+
+        #bodyMateus #bandeiraRm{
+            margin-left: -65px;
+        }
+
+        #bodyMateus #curiosidadesSobre div{
+            padding: 5px;
+            width: 33%;
+            height: 40%;
+            margin-bottom: -5px;
+        }
+
+        #bodyMateus #curiosidadesSobre{
+            height: 70%;
+
+        }
+
+        #bodyMateus footer{
+            position: absolute;
+
+        }
+
         #topoRoseRight h1{
             font-size: 1.6em;
-            margin-left: -30px;
+            margin-left: -60px;
         }
 
         #topoRoseSetaDireita{
@@ -2942,12 +3109,64 @@ form input:focus::placeholder{
             top: 55%;
         }
 
+        #topoRoseCenter img{
+            margin-left: -30%;
+        }
+
         #bodyRose #curiosidadesSobre div{
-            border: none;
             padding: 5px;
             width: 33%;
-            height: 45%;
+            height: 40%;
             margin-bottom: -5px;
+        }
+
+        #bodyRose #curiosidadesSobre{
+            height: 60%;
+        }
+
+        #bodyRose footer{
+            position: absolute;
+            
+        }
+
+        #bodyRose #bandeiraRm{
+            margin-left: -90px;
+        }
+        #imagemGrande{
+            height: 1100px;
+            background-attachment: fixed;
+            background-size: 80% 40%;
+        }
+
+        .left{
+            position: relative;
+            top: 70%;
+            left: -30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            background-attachment: fixed;
+            top:70%;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 30%;
+            left: 30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
         }
 
 
@@ -3084,6 +3303,42 @@ form input:focus::placeholder{
             bottom: 100;
         }
 
+        #imagemGrande{
+            height: 1100px;
+            background-attachment: fixed;
+            background-size: 80% 40%;
+        }
+
+        .left{
+            position: relative;
+            top: 60%;
+            left: -30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .right{
+            position: relative;
+            background-attachment: fixed;
+            top:60%;
+            left: 40%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
+        
+        .close{
+            position: relative;
+            top: 30%;
+            left: 30%;
+            font-size: 2.5em;
+            opacity: 0.8;
+            color: rgb(224, 222, 222);
+            cursor: pointer;
+        }
 
      }
     
